--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-ssr-course": {
+    "angular-ssr": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": {
-              "base": "dist/angular-ssr-course"
+              "base": "dist/angular-ssr"
             },
             "index": "src/index.html",
             "polyfills": [
@@ -37,12 +37,7 @@
             "sourceMap": true,
             "optimization": false,
             "namedChunks": true,
-            "browser": "src/main.ts",
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "browser": "src/main.ts"
           },
           "configurations": {
             "development": {
@@ -80,7 +75,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "angular-ssr-course:build"
+            "buildTarget": "angular-ssr:build"
           },
           "configurations": {
             "development": {
@@ -89,14 +84,14 @@
               "sourceMap": true
             },
             "production": {
-              "buildTarget": "angular-ssr-course:build:production"
+              "buildTarget": "angular-ssr:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "angular-ssr-course:build"
+            "buildTarget": "angular-ssr:build"
           }
         },
         "test": {
@@ -121,11 +116,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-ssr-course:serve"
+            "devServerTarget": "angular-ssr:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-ssr-course:serve:production"
+              "devServerTarget": "angular-ssr:serve:production"
             }
           }
         }
